# grpc

./: docker-compose.yml
client/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile
client/.github/workflows/: build.yml
client/client/: CMakeLists.txt
client/client/src/: main.cpp
client/proto/: CMakeLists.txt
grpc-server/api/: api.go
server/: Dockerfile  go.mod  server.go
